tests/NormalTests/paczka1/small_fuzzy/84637393.err
Error in line 3: Be0CZ A601 91,0
Error in line 5: EUE A506 86,5
Error in line 1: S652 A506 11,1
Error in line 13: zt60Z A601 29,56
